test/configCases/errors/chunk-name-path-traversal-import/index.js
import(/* webpackChunkName: "../escaped" */ "./mod.js").then(m => m);
